<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/relativeLayout">

    <Button
        android:id="@+id/center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/c" />

    <Button
        android:id="@+id/north_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/n" />

    <Button
        android:id="@+id/nw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:text="@string/nw" />

    <Button
        android:id="@+id/west_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/w" />

    <Button
        android:id="@+id/sw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="30dp"
        android:text="@string/sw" />

    <Button
        android:id="@+id/south_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/s" />

    <Button
        android:id="@+id/se_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        android:text="@string/se" />

    <Button
        android:id="@+id/east_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/e" />

    <Button
        android:id="@+id/ne_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        android:text="@string/ne" />

</RelativeLayout>