<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/se_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="@id/east_button"
        app:layout_constraintBottom_toTopOf="@id/south_button" />

    <Button
        android:id="@+id/sw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="@id/west_button"
        app:layout_constraintBottom_toTopOf="@id/south_button" />

    <Button
        android:id="@+id/west_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toStartOf="@id/center_button"
        app:layout_constraintTop_toTopOf="@id/center_button" />

    <Button
        android:id="@+id/south_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        android:layout_marginVertical="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_button" />

    <Button
        android:id="@+id/east_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/e"
        app:layout_constraintLeft_toRightOf="@id/center_button"
        app:layout_constraintTop_toTopOf="@id/center_button" />

    <Button
        android:id="@+id/ne_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ne"
        app:layout_constraintEnd_toEndOf="@id/east_button"
        app:layout_constraintTop_toBottomOf="@id/north_button"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"/>

    <Button
        android:id="@+id/nw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/nw"
        app:layout_constraintStart_toStartOf="@id/west_button"
        app:layout_constraintTop_toBottomOf="@id/north_button" />

    <Button
        android:id="@+id/north_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n"
        android:layout_marginVertical="100dp"
        app:layout_constraintBottom_toTopOf="@id/center_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>