<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TableRow
        android:id="@+id/tr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/north_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/n" />
    </TableRow>

    <TableRow
        android:id="@+id/tr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/west_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/w" />
        <Button
            android:id="@+id/center_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/c" />
        <Button
            android:id="@+id/east_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/e" />
    </TableRow>

    <TableRow
        android:id="@+id/tr3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/south_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/s" />
    </TableRow>
</TableLayout>